--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@zxing/browser": "^0.1.5",
+    "jsbarcode": "^3.12.1",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
